@@ -3,6 +3,10 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2011-12-02 (SVN):
+    * engine/hexen2/dos/net_comx.c: Made the functions TTY_GetComPortConfig,
+      TTY_SetComPortConfig, TTY_GetModemConfig and TTY_SetModemConfig static.
+
 2011-12-01 (SVN):
     * vid_sdl.c (VID_PrepareModes): No need using a different loop counter
       for copying the resolutions list. No need explicitly assigning NULL
